# Aquilia

./: .gitignore  ARCHITECTURE_BUILD_DEPLOY.md  ARCHITECTURE_V2.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  GUIDE.md  MANIFEST.in  ORM_AUDIT.md  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.test.yml  file::memory:?cache=shared  generate_architecture_diagrams.py  pyproject.toml  requirements-dev.txt  setup.py  skills-lock.json  test.py  test_auth_routes.py  test_bp_api.py
.aquilia/: .gitignore  config.json  di_graph.json  diagnostics.json  journal.jsonl  manifest.json  routes.json  schema.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/DISCUSSION_TEMPLATE/: feature-proposals.yml  questions.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auth-regression-tests.yml  ci.yml  controllers-regression-tests.yml  detect-conflicts.yml  di-controllers-regression-tests.yml  labeler.yml  release.yml  zizmor.yml
.hypothesis/constants/: 00fe1a81134339df  012e96ec6b73c097  0288ad09d75c89a4  029fbc944baaec40  02bbdfe165463c10  041baf467a3232d4  04f07ce646ffd7f7  04fc0f6c9fd23123  063dcd5d352b820d  07fddf3901a7a91c  080e51c4dc4aef48  08fad7b9084d588a  0a76dd939e16a9e5  0c3edb6e8697cc34  0e1a54a4b3d4dbdc  0e2a6b31bb6462c3  0e3915d7436d9b5b  1059a740c90e13dc  10ef1cd299d9b6da  10f3416a7a7fccd0  131036c6c7154366  13820b5c810cd26e  13f88298dc3c06ad  1669ef3605e945c2  16a8fd704569302d  17133acb3ca2da1d  172ddebcb66099e4  189198cd1a63bab1  18a3b4f5edf8cc86  192f36d53287a0db  19e91dc0a9f12596  1b215e6c6ba9488b  1c6d93c131eab85c  1cbdafaa9249d2c2  1f4be43907b54ff3  2007d41192c2642c  2100b9454a9a576f  22aadd76f0e3a26c  22f47a23b12a1f2e  241c97413a2fdc45  (+273 more)
.swarm/: __init__.py  engine.py  progress.md  recovery.py  state.json  state.py  tasks.json
.swarm/agents/: __init__.py  base.py  changelog.py  commit.py  coordinator.py  planner.py  review.py  test.py  worker.py
aqdocx/: index.html  netlify.toml  orm_new_pages_content.md  package-lock.json  package.json
aqdocx/public/: llms-full.txt  llms.txt  robots.txt  site.webmanifest  sitemap.xml
aqdocx/scripts/: generate-sitemap.cjs  generate_docs_index.py  prerender.cjs
aqdocx/src/: App.tsx  index.css
aquilia/: __init__.py  _datastructures.py  _uploads.py  _version.py  asgi.py  config.py  config_builders.py  ctx.py  dotenv.py  effects.py  engine.py  entrypoint.py  flow.py  health.py  lifecycle.py  manifest.py  middleware.py  pyconfig.py  request.py  response.py  runtime.py  server.py  signing.py  workspace.py
aquilia/admin/: __init__.py  audit.py  blueprints.py  controller.py  di_providers.py  error_tracker.py  export.py  faults.py  filters.py  hooks.py  inlines.py  models.py  options.py  permissions.py  query_inspector.py  registry.py  security.py  site.py  subsystems.py  templates.py  templates_inline_backup.py  widgets.py
aquilia/aquilary/: __init__.py  cli.py  core.py  errors.py  fingerprint.py  graph.py  handler_wrapper.py  loader.py  route_compiler.py  validator.py
aquilia/aquilia_mcp/: __main__.py  config.py  faults.py  models.py  registry.py  security.py  telemetry.py  version.py
aquilia/artifacts/: __init__.py  builder.py  core.py  kinds.py  reader.py  store.py
aquilia/auth/: __init__.py  audit.py  authz.py  clearance.py  (+16 more)
authentication/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth_keys.json  db.sqlite  db.sqlite3  debug_db.py  debug_routes.py  docker-compose.yml  test_http_auth.py  verify_auth.py  verify_redirect.py  workspace.py
benchmark/: README.md  generate_charts.py  requirements.txt  run.py
benchmarks/: report.md  run.py
docs/: ADMIN_SECURITY_AUDIT.md  API-Architecture.md  AUTH_SYSTEM_AUDIT.md  Architecture.md  Background-Jobs.md  CONTROLLER_SECURITY_AUDIT.md  CORE_SERVER_SECURITY_AUDIT.md  CORE_SYSTEM_ARCHITECTURE_AUDIT.md  CROUS_PYTHON_API.md  Codebase-Knowledge-Graph.md  Codebase-Structure.md  DI_SECURITY_AUDIT.md  Data-Flow.md  Database-Design.md  Developer-Guide.md  ORM_AUDIT.md  ORM_SYSTEM_AUDIT.md  Observability.md  README.md  RESEARCH_REPORT.md  Security-Audit.md  System-Design.md  advanced_blueprint_features.md  aquilary-registry.md  architecture.md  auth-methods.md  blueprint_architecture.md  blueprint_security_audit.md  blueprint_threat_model.md  blueprint_upgrade_plan.md  cli-reference.md  configuration.md  deserialization_vulnerabilities.md  developer-guide.md  documentation-coverage-report.md  dto_system_design.md  effects-system.md  examples.md  faults-system.md  high_performance_serialization.md  (+20 more)
examples/: CLI_WORKFLOWS.md  COVERAGE_REPORT.md  MODULE_COVERAGE.md  README.md  __init__.py
myapp/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  docker-compose.yml  requirements.txt  starter.py  workspace.py
tests/: __init__.py  conftest.py  test_admin.py  test_admin_action_dispatch_and_orm_hydration.py  test_admin_csrf_bulk_action.py  test_admin_expression_schema.py  test_admin_security.py  test_admin_setup_config.py  test_admin_v3.py  test_adversarial.py  test_aquilary_cli.py  test_aquilary_dependency_graph.py  test_aquilary_provider_service_binding.py  test_architecture_review.py  test_auth_di_password_policy.py  test_auth_guards.py  test_auth_manager_session_api.py  test_auth_manager_session_api_faults.py  test_auth_principal_resolution.py  test_auth_session_binding.py  test_auth_sessions_integration.py  test_auth_system.py  test_blueprint_binding_formats.py  test_blueprint_failures.py  test_blueprint_nested_resolution.py  test_blueprint_security.py  test_blueprint_typing.py  test_blueprint_validation_errors.py  test_cli_model_shell_line_editing.py  test_contract_binding_formats.py  test_contract_failures.py  test_contract_nested_resolution.py  test_contract_typing.py  test_controller_attrs.py  test_controller_parameter_injection.py  test_controller_system.py  test_crous_request_response.py  test_cte_queries.py  test_db_cli_enhanced.py  test_dep_precedence.py  (+100 more)
(+2034 files in other folders)
