# ============================================================================
# Aquilia — Async-native Python web framework
# ============================================================================
# Install core:           pip install aquilia
# Install with extras:    pip install aquilia[auth,redis,mail]
# Install everything:     pip install aquilia[all]
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "aquilia"
dynamic = ["version"]
description = "Async-native Python web framework with flow-first routing"
readme = "README.md"
authors = [
    { name = "Pawan Kumar", email = "aegis.invincible@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
keywords = [
    "web", "framework", "async", "asgi", "http", "api",
    "routing", "middleware", "dependency-injection",
]

# ---------------------------------------------------------------------------
# Core dependencies — required by every install
# ---------------------------------------------------------------------------
dependencies = [
    "click>=8.1.0",
    "uvicorn>=0.30.0",
    # Template engine — used by admin panel and user templates (always loaded)
    "jinja2>=3.1.0",
    "markupsafe>=2.1.0",
    # Surp serializer — used for manifest compilation and runtime evaluation
    "surp",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Async SQLite compat shim — DEPRECATED: aiosqlite replaced by native aquilia.sqlite.
# Kept for gradual migration; will be removed in next major version.
sqlite-compat = ["aiosqlite>=0.20.0"]

# Auth subsystem — cryptography + password hashing
auth = [
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
]

# Multipart form / file-upload parsing
multipart = [
    "python-multipart>=0.0.9",
]

# Redis cache & socket adapter backends
redis = [
    "redis[asyncio]>=5.0.0",
]

# SMTP email provider
mail = [
    "aiosmtplib>=3.0.0",
]

# AWS SES email provider
mail-ses = [
    "aiobotocore>=2.9.0",
]

# SendGrid email provider
mail-sendgrid = [
    "httpx>=0.27.0",
]

# Production server (Gunicorn + Uvicorn workers)
server = [
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
]

# Async PostgreSQL driver
postgres = [
    "asyncpg>=0.31.0",
]

# OpenTelemetry distributed tracing
otel = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-asgi>=0.45b0",
]


# ---- Convenience bundles ----------------------------------------------------

full = [
    "aquilia[auth,multipart,redis,mail,mail-ses,mail-sendgrid,server,postgres,otel]",
]

# Absolutely everything
all = [
    "aquilia[full]",
]

# Testing & development
testing = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

dev = [
    "aquilia[testing]",
    "ruff>=0.15.15",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

# ---------------------------------------------------------------------------
# URLs
# ---------------------------------------------------------------------------
[project.urls]
Homepage    = "https://github.com/tubox-labs/Aquilia"
Documentation = "https://github.com/tubox-labs/Aquilia#readme"
Repository  = "https://github.com/tubox-labs/Aquilia"
Issues      = "https://github.com/tubox-labs/Aquilia/issues"
Changelog   = "https://github.com/tubox-labs/Aquilia/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Console scripts
# ---------------------------------------------------------------------------
[project.scripts]
aq = "aquilia.cli.__main__:main"

# ---------------------------------------------------------------------------
# Setuptools configuration
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["aquilia*"]
exclude = ["tests*", "benchmark*", "docs*", "myapp*"]

[tool.setuptools.package-data]
"aquilia" = ["py.typed"]
"aquilia.admin" = ["templates/**/*.html"]

"aquilia.patterns" = ["README.md"]
"aquilia.templates" = ["README.md"]

[tool.setuptools.dynamic]
version = {attr = "aquilia._version.__version__"}

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["aquilia"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "env",
    "venv",
    "__pycache__",
    "*.egg-info",
    "dist",
    "node_modules",
    "aqdocx",
    "myapp",
    "benchmark",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top of file
    "E701",   # multiple statements on one line
    "E721",   # type comparison (use isinstance)
    "E741",   # ambiguous variable name
    "F403",   # star import used
    "F811",   # redefined unused name
    "F821",   # undefined name (often forward refs / dynamic)
    "F841",   # local variable assigned but never used
    "N801",   # class name should use CapWords
    "N802",   # function name should be lowercase
    "N805",   # first argument should be 'self'
    "N806",   # variable in function should be lowercase
    "N814",   # camelCase imported as constant
    "N817",   # camelCase imported as acronym
    "N818",   # exception name should end in Error
    "B004",   # unreliable callable check
    "B007",   # unused loop variable
    "B018",   # useless expression
    "B023",   # function uses loop variable
    "B027",   # empty method without abstract decorator
    "B904",   # raise without from inside except
    "B905",   # zip without strict parameter
    "SIM102", # collapsible if statements
    "SIM103", # needless bool
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator
    "SIM109", # compare with tuple
    "SIM110", # reimplemented builtin
    "SIM112", # uncapitalized env variables
    "SIM113", # enumerate for loop
    "SIM115", # open file with context handler
    "SIM116", # if-else instead of dict lookup
    "SIM118", # in dict keys
    "SIM201", # negate equal op
    "F402",   # import shadowed by loop variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional
".swarm/**/*.py" = ["N999"]  # dot-prefixed directory is valid for swarm system

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
